--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,14 @@ body {
   margin-top: 80px;
   text-align: center;
 }
+
+.intro__drinks-img {
+  transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
+  cursor: pointer;
+}
+
+.intro__drinks-img:hover {
+  transform: translateY(-10px);
+  -webkit-transform: translateY(-10px);
+}
